Fix warning, ignore some build artifacts

--- a/Beard.Monads.Nuget/NuGet.config
+++ b/Beard.Monads.Nuget/NuGet.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <apikeys>
-  </apikeys>
+  <apikeys></apikeys>
   <packageSources>
     <add key="Temp" value="c:\temp\nuget" />
   </packageSources>
