--- a/Beard.Monads/Beard.Monads.csproj
+++ b/Beard.Monads/Beard.Monads.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.CSharp" Condition=" '$(TargetFrameworkVersion)' != 'v3.5' " />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
