--- a/Beard.Monads.Nuget/NuGet.config
+++ b/Beard.Monads.Nuget/NuGet.config
@@ -3,5 +3,6 @@
   <apikeys></apikeys>
   <packageSources>
     <add key="Temp" value="c:\temp\nuget" />
+    <add key="NuGet official package source" value="https://www.nuget.org" />
   </packageSources>
 </configuration>
