--- a/Beard.Monads.Nuget/Bearded.Monads.Nuget.csproj
+++ b/Beard.Monads.Nuget/Bearded.Monads.Nuget.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{0451BAEF-DF2E-4B98-8644-94EE9415E389}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NuGet.Packager1</RootNamespace>
-    <AssemblyName>NuGet.Packager1</AssemblyName>
+    <RootNamespace>Bearded.Monads.Nuget</RootNamespace>
+    <AssemblyName>Bearded.Monads.Nuget</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
