--- a/Beard.Monads/Bearded.Monads.csproj
+++ b/Beard.Monads/Bearded.Monads.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C984BB2A-29D8-4BA5-AAB1-BDCDB019F587}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Beard.Monads</RootNamespace>
-    <AssemblyName>Beard.Monads</AssemblyName>
+    <RootNamespace>Bearded.Monads</RootNamespace>
+    <AssemblyName>Bearded.Monads</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <Framework>$(TargetFrameworkVersion.Replace("v", "NET").Replace(".", ""))</Framework>
     <ChildBuild>True</ChildBuild>
@@ -28,7 +28,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Beard.Monads.Nuget\lib\$(Framework)\</OutputPath>
+    <OutputPath>..\Bearded.Monads.Nuget\lib\$(Framework)\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
