--- a/Bearded.Monads.Nuget/Package.nuspec
+++ b/Bearded.Monads.Nuget/Package.nuspec
@@ -2,14 +2,14 @@
 <package >
   <metadata>
     <id>Bearded.Monads</id>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <title>Bearded.Monads</title>
     <authors>khanage@gmail.com</authors>
     <description>
       A place to put various monads that are useful in general C# programming.
     </description>
     <releaseNotes>
-      Initial release with Option and Either which functors between them.
+      Add in a MaybeGetValue extension method for IDictionary&lt;K,V&gt; that returns everything in an option.
     </releaseNotes>
     <summary>
       
