--- a/Bearded.Monads.Nuget/Bearded.Monads.Nuget.csproj
+++ b/Bearded.Monads.Nuget/Bearded.Monads.Nuget.csproj
@@ -52,7 +52,9 @@
     <None Include="NuGetPackage.ps1" />
     <None Include="NuGetSetup.ps1" />
     <None Include="NuGet.exe" />
-    <None Include="NuGet.config" />
+    <None Include="NuGet.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Package.nuspec" />
     <None Include="tools\init.ps1" />
     <None Include="tools\install.ps1" />
