--- a/Bearded.Monads.Nuget/Package.nuspec
+++ b/Bearded.Monads.Nuget/Package.nuspec
@@ -2,14 +2,14 @@
 <package >
   <metadata>
     <id>Bearded.Monads</id>
-    <version>1.0.4</version>
+    <version>1.0.6</version>
     <title>Bearded.Monads</title>
     <authors>khanage@gmail.com</authors>
     <description>
       A place to put various monads that are useful in general C# programming.
     </description>
     <releaseNotes>
-      Add in a MaybeGetValue extension method for IDictionary&lt;K,V&gt; that returns everything in an option.
+      Add in ConcatOptions to flatten an IEnumerable&lt;Option&lt;A&gt;&gt; to an IEnumerable&lt;A&gt;
     </releaseNotes>
     <summary>
       
