--- a/Bearded.Monads.Nuget/Package.nuspec
+++ b/Bearded.Monads.Nuget/Package.nuspec
@@ -2,14 +2,14 @@
 <package >
   <metadata>
     <id>Bearded.Monads</id>
-    <version>1.0.13</version>
+    <version>1.0.14</version>
     <title>Bearded.Monads</title>
     <authors>khanage@gmail.com</authors>
     <description>
       A place to put various monads that are useful in general C# programming.
     </description>
     <releaseNotes>
-      Add operator for bool.
+      Remove Value getter (it causes serialisation issues).
     </releaseNotes>
     <summary>
       
