Update package info

--- a/Bearded.Monads.Nuget/Package.nuspec
+++ b/Bearded.Monads.Nuget/Package.nuspec
@@ -2,14 +2,16 @@
 <package >
   <metadata>
     <id>Bearded.Monads</id>
-    <version>1.0.14</version>
+    <version>1.0.16</version>
     <title>Bearded.Monads</title>
     <authors>khanage@gmail.com</authors>
     <description>
       A place to put various monads that are useful in general C# programming.
     </description>
     <releaseNotes>
-      Remove Value getter (it causes serialisation issues).
+      Add Select and Where to either.
+      Add Else to either, which acts as a unifier :: Either a b -> (a -> c) -> (b -> c) -> c
+      Add elsethrow to option.
     </releaseNotes>
     <summary>
       
