--- a/Bearded.Monads.Nuget/Package.nuspec
+++ b/Bearded.Monads.Nuget/Package.nuspec
@@ -2,14 +2,15 @@
 <package >
   <metadata>
     <id>Bearded.Monads</id>
-    <version>1.0.24</version>
+    <version>1.0.25</version>
     <title>Bearded.Monads</title>
     <authors>khanage@gmail.com</authors>
     <description>
       A place to put various monads that are useful in general C# programming.
     </description>
     <releaseNotes>
-      Add else empty extension method.
+      AggregateOrNone extensions.
+      Return None on implicit cast for ref types equal to null.
     </releaseNotes>
     <summary>
       
