--- a/Bearded.Monads.Tests/Bearded.Monads.Tests.csproj
+++ b/Bearded.Monads.Tests/Bearded.Monads.Tests.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncApplicativeTests.cs" />
+    <Compile Include="AsyncExtensionTests.cs" />
     <Compile Include="EitherTests.cs" />
     <Compile Include="OptionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
