--- a/Bearded.Monads/Bearded.Monads.csproj
+++ b/Bearded.Monads/Bearded.Monads.csproj
@@ -53,9 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncApplicative.cs" />
+    <Compile Include="AsyncExtensions.cs" />
     <Compile Include="EitherExtensions.cs" />
     <Compile Include="EitherSuccessOrError.cs" />
     <Compile Include="Option.cs" />
+    <Compile Include="OptionalApplicative.cs" />
     <Compile Include="OptionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MaybeParseExtensions.cs" />
