Try to wrap appveyor expansion macro...

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ branches:
 environment:
   LEELOO_MAJORVERSION: 1
   LEELOO_MINORVERSION: 1
-  LEELOO_BUILDNUMBER: {build}
+  LEELOO_BUILDNUMBER: "{build}"
 build_script:
   - cmd: .\build.cmd
 deploy:
