--- a/Bearded.Monads/Bearded.Monads.csproj
+++ b/Bearded.Monads/Bearded.Monads.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.1</TargetFramework>
     <RootNamespace>Bearded.Monads</RootNamespace>
     <AssemblyName>Bearded.Monads</AssemblyName>
-    <PackageIconUrl>https://raw.githubusercontent.com/khanage/Bearded.Monads/master/beard.jpg</PackageIconUrl>
+    <PackageIcon>beard.jpg</PackageIcon>
     <RepositoryUrl>https://github.com/khanage/Bearded.Monads</RepositoryUrl>
     <PackageTags>functional monads applicatives</PackageTags>
     <Description>https://github.com/khanage/Bearded.Monads</Description>
@@ -11,4 +11,7 @@
     <AssemblyVersion>1.2.1.0</AssemblyVersion>
     <FileVersion>1.2.1.0</FileVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="../beard.jpg" Pack="true" PackagePath="/" />
+  </ItemGroup>
 </Project>
