--- a/Bearded.Monads/Bearded.Monads.csproj
+++ b/Bearded.Monads/Bearded.Monads.csproj
@@ -15,6 +15,6 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="../beard.jpg" Pack="true" PackagePath="/" />
-    <None Include="../README.md" Packe="true" PackagePath="/" />
+    <None Include="../README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 </Project>
